# cppsqlx

./: CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  main_repo_pwf_query.cpp
include/: column.hpp  connection.hpp  cppsqlx.hpp  cppsqlxincludes.hpp  cppsqlxroot.hpp  database.hpp  databasemetadata.hpp  dataset.hpp  datasetfactory.hpp  dbprovider.hpp  drivermanager.hpp  foreignkey.hpp  globaldefinitions.hpp  helperfunctions.hpp  loadprotocols.hpp  logger.hpp  odbcerror.hpp  primarykey.hpp  resultset.hpp  resultsetiterator.hpp  resultsetmetadata.hpp  sqlcopy.hpp  sqlcreateexternaltable.hpp  sqlcreatetable.hpp  sqlcreateview.hpp  sqlddl.hpp  sqldelete.hpp  sqldml.hpp  sqldrop.hpp  sqlexception.hpp  sqlexpression.hpp  sqlinsert.hpp  sqljoinable.hpp  sqljoinexpression.hpp  sqloperators.hpp  sqlquery.hpp  sqlselect.hpp  sqlselectionset.hpp  sqltruncate.hpp  sqltypes.hpp  (+4 more)
source/: CMakeLists.txt  column.cpp  connection.cpp  cppsqlx.cpp  cppsqlxroot.cpp  database.cpp  databasemetadata.cpp  dataset.cpp  datasetfactory.cpp  drivermanager.cpp  foreignkey.cpp  globaldefinitions.cpp  helperfunctions.cpp  loadprotocols.cpp  logger.cpp  odbcerror.cpp  primarykey.cpp  resultset.cpp  resultsetiterator.cpp  resultsetmetadata.cpp  sqlcopy.cpp  sqlcreateexternaltable.cpp  sqlcreatetable.cpp  sqlcreateview.cpp  sqlddl.cpp  sqldelete.cpp  sqldml.cpp  sqldrop.cpp  sqlexception.cpp  sqlexpression.cpp  sqlinsert.cpp  sqljoinable.cpp  sqljoinexpression.cpp  sqloperators.cpp  sqlquery.cpp  sqlselect.cpp  sqlselectionset.cpp  sqltruncate.cpp  sqltypes.cpp  sqlupdate.cpp  (+3 more)
test/: CMakeLists.txt  main.cpp
