cmake_minimum_required(VERSION 2.8)
project(cppsqlx)

set(CPPSQLX_MAJOR_VERSION 0)
set(CPPSQLX_MINOR_VERSION 5)
set(CPPSQLX_PATCH_VERSION 0)
set(CPPSQLX_VERSION ${CPPSQLX_MAJOR_VERSION}.${CPPSQLX_MINOR_VERSION}.${CPPSQLX_PATCH_VERSION})

MESSAGE("Building cppsqlx : " ${CPPSQLX_VERSION})

ADD_DEFINITIONS(-std=c++11 -D_GLIBCXX_USE_CXX11_ABI=1)

add_subdirectory(source)
add_subdirectory(test)
add_subdirectory(examples)

SET(CPACK_GENERATOR TGZ)
SET(CPACK_PACKAGE_VERSION_MAJOR 1)
SET(CPACK_PACKAGE_VERSION_MINOR 3)
SET(CPACK_PACKAGE_VERSION_PATCH 6)
SET(CPACK_PACKAGE_INSTALL_DIRECTORY CMake ${CMake_VERSION_MAJOR}.${CMake_VERSION_MINOR}.${CMake_VERSION_PATCH})
INCLUDE(CPack)
