INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include
)

ADD_LIBRARY(cppsqlx SHARED
cppsqlxroot.cpp
drivermanager.cpp
logger.cpp
database.cpp
odbcerror.cpp
sqlexception.cpp
connection.cpp
databasemetadata.cpp
statement.cpp
resultset.cpp
resultsetmetadata.cpp
resultsetiterator.cpp
column.cpp
dataset.cpp
sqljoinable.cpp
table.cpp
datasetfactory.cpp
sqlexpression.cpp
sqltypes.cpp
helperfunctions.cpp
sqljoinexpression.cpp
sqloperators.cpp
sqlselect.cpp
sqlinsert.cpp
sqlupdate.cpp
sqldelete.cpp
sqlcopy.cpp
sqlcreatetable.cpp
sqlcreateview.cpp
sqlcreateexternaltable.cpp
sqldrop.cpp
sqltruncate.cpp
)

TARGET_LINK_LIBRARIES(cppsqlx ) 

install(TARGETS cppsqlx DESTINATION lib)
install(FILES 
${PROJECT_SOURCE_DIR}/include/cppsqlx.hpp
${PROJECT_SOURCE_DIR}/include/column.hpp
${PROJECT_SOURCE_DIR}/include/connection.hpp
${PROJECT_SOURCE_DIR}/include/cppsqlxincludes.hpp
${PROJECT_SOURCE_DIR}/include/cppsqlxroot.hpp
${PROJECT_SOURCE_DIR}/include/database.hpp
${PROJECT_SOURCE_DIR}/include/databasemetadata.hpp
${PROJECT_SOURCE_DIR}/include/dataset.hpp
${PROJECT_SOURCE_DIR}/include/dbprovider.hpp
${PROJECT_SOURCE_DIR}/include/drivermanager.hpp
${PROJECT_SOURCE_DIR}/include/foreignkey.hpp
${PROJECT_SOURCE_DIR}/include/globaldefinitions.hpp
${PROJECT_SOURCE_DIR}/include/logger.hpp
${PROJECT_SOURCE_DIR}/include/odbcerror.hpp
${PROJECT_SOURCE_DIR}/include/primarykey.hpp
${PROJECT_SOURCE_DIR}/include/resultset.hpp
${PROJECT_SOURCE_DIR}/include/resultsetiterator.hpp
${PROJECT_SOURCE_DIR}/include/resultsetmetadata.hpp
${PROJECT_SOURCE_DIR}/include/sqlexception.hpp
${PROJECT_SOURCE_DIR}/include/statement.hpp
${PROJECT_SOURCE_DIR}/include/uniquekey.hpp
${PROJECT_SOURCE_DIR}/include/sqljoinable.hpp
${PROJECT_SOURCE_DIR}/include/table.hpp
${PROJECT_SOURCE_DIR}/include/datasetfactory.hpp
${PROJECT_SOURCE_DIR}/include/sqlexpression.hpp
${PROJECT_SOURCE_DIR}/include/sqltypes.hpp
${PROJECT_SOURCE_DIR}/include/helperfunctions.hpp
${PROJECT_SOURCE_DIR}/include/sqljoinexpression.hpp
${PROJECT_SOURCE_DIR}/include/sqloperators.hpp
${PROJECT_SOURCE_DIR}/include/sqlselectionset.hpp
${PROJECT_SOURCE_DIR}/include/sqlquery.hpp
${PROJECT_SOURCE_DIR}/include/sqlselect.hpp
${PROJECT_SOURCE_DIR}/include/sqldml.hpp
${PROJECT_SOURCE_DIR}/include/sqlinsert.hpp
${PROJECT_SOURCE_DIR}/include/sqlupdate.hpp
${PROJECT_SOURCE_DIR}/include/sqldelete.hpp
${PROJECT_SOURCE_DIR}/include/sqlcopy.hpp
${PROJECT_SOURCE_DIR}/include/sqlcreatetable.hpp
${PROJECT_SOURCE_DIR}/include/sqlcreateview.hpp
${PROJECT_SOURCE_DIR}/include/sqlcreateexternaltable.hpp
${PROJECT_SOURCE_DIR}/include/loadprotocols.hpp
${PROJECT_SOURCE_DIR}/include/sqldrop.hpp
${PROJECT_SOURCE_DIR}/include/sqltruncate.hpp
${PROJECT_SOURCE_DIR}/include/sqlddl.hpp
DESTINATION include)
